# spriter

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  code-review.md  main.py  missing-tests.md  pyproject.toml  pytest.xml  test_spriter.py
.github/workflows/: uv-pytest-coverage.yml  uv-pytest.yml
spriter/: __init__.py  main.py
