[project]
name = "spriter"
version = "0.2.0"
description = "Convert video files into sprite sheets using ffmpeg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pillow>=11.3.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
]

[project.scripts]
spriter = "spriter.main:main"

[tool.setuptools.packages.find]
include = ["spriter*"]
